kubernetes/kustomize/cap/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cap
  labels:
    app: cap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cap
  template:
    metadata:
      labels:
        app: cap
    spec:
      serviceAccountName: cap
      terminationGracePeriodSeconds: 10
      containers:
      - name: cap
        image: tiago2/cap:3.1.3
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
