kubernetes/kustomize/cap/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cap
  labels:
    app: cap
spec:
  selector:
    app: cap
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
