kubernetes/kustomize/cap/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cap
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: "4096"
    cert-manager.io/private-key-rotation-policy: Always
spec:
  rules:
  - host: cap.eco-preprod.tsi-dev.otc-service.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cap
            port:
              number: 80
  tls:
  - hosts:
    - cap.eco-preprod.tsi-dev.otc-service.com
    secretName: cap-tls
