kubernetes/kustomize/cap/base/login-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cap-login
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  ingressClassName: nginx
  rules:
    - host: cap.eco.tsi-dev.otc-service.com
      http:
        paths:
          - path: /auth/login
            pathType: Prefix
            backend:
              service:
                name: cap
                port:
                  number: 80
  tls:
    - hosts:
        - cap.eco.tsi-dev.otc-service.com
      secretName: cap-tls
